--- a/includes/prepare.yml
+++ b/includes/prepare.yml
@@ -63,6 +63,7 @@
       - '{{ python_dev }}'
       - '{{ python_mysql }}'
       - '{{ wget }}'
+      - '{{ curl }}'
 
 - hosts: "primary,replicas"
   become: yes
